chore: add nodemailer

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 BLOG_URL=http://localhost:4000
 BLOG_URL_PROD=https://blog.damienslab.com
+EMAIL_USER=enquiry@mbos.com.my
+EMAIL_PASS=mbosEnquiry6543%
+SMTP_HOST=smtp.mbos.com.my
+SMTP_PORT=465
