--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "dev": "npm run build && npm start"
   },
   "dependencies": {
-    "axios": "^1.4.0",
+    "axios": "^1.7.7",
+    "body-parser": "^1.20.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
-    "express": "^4.18.2",
+    "express": "^4.21.0",
     "express-rate-limit": "^6.9.0",
     "he": "^1.2.0",
     "helmet": "^7.0.0",
